--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   },
   "name": "coinchart",
   "description": "Display cryptocurrency candlestick charts in your terminal",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "main": "index.js",
   "bin": {
     "coinchart": "./index.js"
@@ -18,6 +18,8 @@
     "url": "git+https://github.com/dmacdermott/coinchart.git"
   },
   "keywords": [
+    "crypto chart",
+    "candlestick chart",
     "candlestick",
     "chart",
     "cryptocurrency",
